# CoCaml

./: .gitignore  CoCaml.cabal  Makefile  README.md  index.html  kanbun.cabal  stack.yaml
app/: CLI.hs  Main.hi  Main.hs
demo/: demo.ml  index.html
haste/: index.html
sample/: sum.kanbun
src/: Ast.hs  Lib.hs  Parser.hs  Transpiler.hs
test/: LibSpec.hs  ParserSpec.hs  TranspilerSpec.hs
