name:                CoCaml
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/wass80/CoCaml#readme
license:             MIT
license-file:        LICENSE
author:              wass80
maintainer:          wasss80@gmail.com
copyright:           2016
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  Parser
                    ,  Ast
                    ,  Transpiler
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable cocaml
  hs-source-dirs:      app
  main-is:             CLI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CoCaml
  if impl(haste)
    build-depends:     haste-lib >= 0.5 && < 0.6
  else
    build-depends:     haste-compiler >= 0.5 && < 0.6
  default-language:    Haskell2010

test-suite CoCaml-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CoCaml
                     , hspec
                     , parsec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wass80/CoCaml
